--- a/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-standardised/ec-component-site-header-standardised.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-standardised/ec-component-site-header-standardised.scss
@@ -11,8 +11,11 @@
 
 @mixin ecl-site-header-standardised(
   $logo-height-xs: 1.75rem,
-  $logo-height-s: 3rem,
-  $logo-height-m: 3.75rem,
+  $logo-width-xs: 10.1rem,
+  $logo-height-sm: 3rem,
+  $logo-width-sm: 12.1rem,
+  $logo-height-lg: 3.75rem,
+  $logo-width-lg: 15.1rem,
   $search-width-l: 25rem,
   $search-width-xl: 31.5rem
 ) {
@@ -42,7 +45,7 @@
   .ecl-site-header-standardised__logo-image {
     display: block;
     max-height: $logo-height-xs;
-    max-width: 10.1rem; // hack to allow logo to be resized dynamically
+    max-width: $logo-width-xs; // hack to allow logo to be resized dynamically
   }
 
   .ecl-site-header-standardised__action {
@@ -183,9 +186,10 @@
     }
 
     .ecl-site-header-standardised__logo-image {
-      height: $logo-height-s;
+      height: $logo-height-sm;
       max-height: 100%;
       max-width: 100%;
+      width: $logo-width-sm;
     }
   }
 
@@ -206,7 +210,8 @@
     }
 
     .ecl-site-header-standardised__logo-image {
-      height: $logo-height-m;
+      height: $logo-height-lg;
+      width: $logo-width-lg;
     }
 
     .ecl-site-header-standardised__login-box {
